--- a/pom.xml
+++ b/pom.xml
@@ -101,13 +101,19 @@
         </dependency>
 
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+
+                <configuration>
+                    <altDeploymentRepository>local-nexus::default::http://localhost:8081/repository/maven-snapshots/</altDeploymentRepository>
+                </configuration>
             </plugin>
         </plugins>
     </build>
+
 
 </project>
