lagback and docker file

--- a/pom.xml
+++ b/pom.xml
@@ -99,7 +99,10 @@
             <artifactId>postgresql</artifactId>
             <version>42.5.4</version>
         </dependency>
-
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
