--- a/pom.xml
+++ b/pom.xml
@@ -110,10 +110,13 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-deploy-plugin</artifactId>
-
+                <version>3.0.0-M1</version>
                 <configuration>
-                    <altDeploymentRepository>local-nexus::default::http://localhost:8081/repository/maven-snapshots/</altDeploymentRepository>
+                    <altDeploymentRepository>gcp::default::https://Iowa-maven.pkg.dev/construction-project-382718/construction-service/</altDeploymentRepository>
                 </configuration>
+                <!--<configuration>
+                    <altDeploymentRepository>local-nexus::default::http://localhost:8081/repository/maven-snapshots/</altDeploymentRepository>
+                </configuration>-->
             </plugin>
         </plugins>
     </build>
