--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.3.3.RELEASE</version>
+        <relativePath/>
     </parent>
     <groupId>org.construction</groupId>
     <artifactId>construction-service</artifactId>
@@ -109,7 +110,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-deploy-plugin</artifactId>
-                <version>3.0.0-M1</version>
                 <configuration>
                     <altDeploymentRepository>gcp::default::https://us-central1-maven.pkg.dev/construction-project-382718/construction-service/</altDeploymentRepository>
                 </configuration>
