--- a/pom.xml
+++ b/pom.xml
@@ -104,37 +104,18 @@
             <artifactId>logback-classic</artifactId>
         </dependency>
     </dependencies>
-    <distributionManagement>
-        <snapshotRepository>
-            <id>artifact-registry</id>
-            <url>artifactregistry://us-central1-maven.pkg.dev/construction-project-382718/construction-service</url>
-        </snapshotRepository>
-        <repository>
-            <id>artifact-registry</id>
-            <url>artifactregistry://us-central1-maven.pkg.dev/construction-project-382718/construction-service</url>
-        </repository>
-    </distributionManagement>
 
-    <repositories>
-        <repository>
-            <id>artifact-registry</id>
-            <url>artifactregistry://us-central1-maven.pkg.dev/construction-project-382718/construction-service</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-    </repositories>
     <build>
-        <extensions>
-            <extension>
-                <groupId>com.google.cloud.artifactregistry</groupId>
-                <artifactId>artifactregistry-maven-wagon</artifactId>
-                <version>2.2.0</version>
-            </extension>
-        </extensions>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+
+                <configuration>
+                    <altDeploymentRepository>local-nexus::default::http://localhost:8081/repository/maven-snapshots/</altDeploymentRepository>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 
 
