--- a/deployment-dev.yaml
+++ b/deployment-dev.yaml
@@ -1,34 +1,14 @@
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  name: construction-service-account
----
 apiVersion: rbac.authorization.k8s.io/v1
-kind: Role
+kind: ClusterRole
 metadata:
-  name: construction-service-role
+  namespace: default
+  name: service-reader
 rules:
-  - apiGroups:
-      - ""
-      - "extensions"
-      - "apps"
-    resources:
-      - "*"
-    verbs:
-      - "*"
+  - apiGroups: [""] # "" indicates the core API group
+    resources: ["services"]
+    verbs: ["get", "watch", "list"]
 ---
-apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
-metadata:
-  name: construction-service-role-binding
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: Role
-  name: construction-service-role
-subjects:
-  - kind: ServiceAccount
-    name: construction-service-account
----
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -42,10 +22,7 @@ spec:
     metadata:
       labels:
         app: construction-service
-      annotations:
-        iam.gke.io/gcp-service-account: construction-service-account@construction-project-382718.iam.gserviceaccount.com
     spec:
-      serviceAccountName: construction-service-account
       containers:
         - name: construction-service
           image: gcr.io/construction-project-382718/construction-service:44
