--- a/deployment-dev.yaml
+++ b/deployment-dev.yaml
@@ -1,3 +1,16 @@
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: deployment-viewer
+  namespace: default
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: Role
+  name: view
+subjects:
+  - kind: User
+    name: gke_construction-project-382718_us-central1_construction-cluster
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
