--- a/deployment-dev.yaml
+++ b/deployment-dev.yaml
@@ -26,23 +26,30 @@ spec:
               drop:
                 - ALL
             privileged: false
-            readOnlyRootFilesystem: true
-          image: gcr.io/construction-project-382718/construction-service:94
+            readOnlyRootFilesystem: false
+          image: gcr.io/construction-project-382718/construction-service:109
           ports:
-            - containerPort: 8080
+            - name: liveness-port
+              containerPort: 8080
+              hostPort: 8080
           env:
             - name: PORT
               value: "8080"
             - name: DISABLE_PROFILER
               value: "1"
-          readinessProbe:
-            periodSeconds: 5
-            exec:
-              command: ["/bin/grpc_health_probe", "-addr=:8080"]
+
+          startupProbe:
+            httpGet:
+              path: /healthz
+              port: liveness-port
+            failureThreshold: 30
+            periodSeconds: 10
           livenessProbe:
-            periodSeconds: 5
-            exec:
-              command: ["/bin/grpc_health_probe", "-addr=:8080"]
+            httpGet:
+              path: /healthz
+              port: liveness-port
+            failureThreshold: 1
+            periodSeconds: 10
           resources:
             requests:
               cpu: 100m
